@@ -157,6 +157,19 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|SolrResourceLoader
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
 name|slf4j
 operator|.
 name|Logger
@@ -473,6 +486,42 @@ block|}
 block|}
 block|}
 block|}
+block|}
+comment|/**    * Returns a displayable unified path to the given resource. For non-solrCloud that will be the    * same as getConfigDir, but for Cloud it will be getCollectionZkPath ending in a /    *<p/>    *<b>Note:</b> Do not use this to generate a valid file path, but for debug printing etc    * @param loader Resource loader instance    * @return a String of path to resource    */
+DECL|method|unifiedResourcePath
+specifier|public
+specifier|static
+name|String
+name|unifiedResourcePath
+parameter_list|(
+name|SolrResourceLoader
+name|loader
+parameter_list|)
+block|{
+return|return
+operator|(
+name|loader
+operator|instanceof
+name|ZkSolrResourceLoader
+operator|)
+condition|?
+operator|(
+operator|(
+name|ZkSolrResourceLoader
+operator|)
+name|loader
+operator|)
+operator|.
+name|getCollectionZkPath
+argument_list|()
+operator|+
+literal|"/"
+else|:
+name|loader
+operator|.
+name|getConfigDir
+argument_list|()
+return|;
 block|}
 block|}
 end_class
